--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,14 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"paths": {
+			"$comps": ["src/lib/components"],
+			"$comps/*": ["src/lib/components/*"],
+
+		}
 	}
+	
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
